@@ -39,20 +39,21 @@ public class SelectTree extends JTree {
         addMouseListener(new MouseAdapter() {
             @Override
             public void mouseClicked(MouseEvent mouseEvent) {
-                TreePath path = getSelectionPath();
-                if (path != null && path.getPathCount() > 0) {
-                    LibraryNode node = (LibraryNode) path.getLastPathComponent();
-                    if (node.isLeaf()) {
-                        try {
-                            ElementTypeDescription d = node.getDescription();
-                            component.setPartToInsert(new VisualElement(d.getName()).setShapeFactory(shapeFactory));
-                            insertHistory.add(new InsertAction(node, insertHistory, component, shapeFactory));
-                        } catch (IOException e) {
-                            e.printStackTrace();
+                if (mouseEvent.getClickCount() == 2) {
+                    TreePath path = getSelectionPath();
+                    if (path != null && path.getPathCount() > 0) {
+                        LibraryNode node = (LibraryNode) path.getLastPathComponent();
+                        if (node.isLeaf()) {
+                            try {
+                                ElementTypeDescription d = node.getDescription();
+                                component.setPartToInsert(new VisualElement(d.getName()).setShapeFactory(shapeFactory));
+                                insertHistory.add(new InsertAction(node, insertHistory, component, shapeFactory));
+                            } catch (IOException e) {
+                                e.printStackTrace();
+                            }
                         }
                     }
                 }
-
             }
         });
         setCellRenderer(new MyCellRenderer());
